@@ -68,10 +68,14 @@
 package org.opencadc.inventory;
 
 import ca.nrc.cadc.util.HexUtil;
+
+import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URI;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Date;
 import java.util.UUID;
@@ -79,15 +83,15 @@ import org.apache.log4j.Logger;
 
 /**
  * Static utility methods.
- * 
+ *
  * @author pdowler
  */
 public abstract class InventoryUtil {
     private static final Logger log = Logger.getLogger(InventoryUtil.class);
 
-    private InventoryUtil() { 
+    private InventoryUtil() {
     }
-    
+
     /**
      * Compute a short code based on the URI argument. The returned code is a hex
      * string of the specified length generated from the given URI.
@@ -108,7 +112,7 @@ public abstract class InventoryUtil {
             throw new RuntimeException("BUG: failed to get instance of SHA-1", ex);
         }
     }
-    
+
     /**
      * Compute the filename of an artifact URI.
      * @param uri The uri to parse
@@ -123,13 +127,13 @@ public abstract class InventoryUtil {
         }
         return ssp;
     }
-    
+
     /**
      * Load and instantiate an instance of the specified Java interface. This method uses
      * the fully-qualified class name as a system property key; the value of the system property
      * is the fully qualified class name of an implementation of that interface.
-     * 
-     * @param <T>
+     *
+     * @param <T>   Class type of the instantiated class
      * @param clazz an interface class
      * @return configured implementation of the interface
      * @throws IllegalStateException if an instance cannot be created
@@ -141,22 +145,66 @@ public abstract class InventoryUtil {
             throw new IllegalStateException("CONFIG: " + cnameProp + " not set");
         }
         try {
-            Class c = Class.forName(cname);
-            return (T) c.newInstance();
+            Class<?> c = Class.forName(cname);
+            return (T) c.getDeclaredConstructor().newInstance();
+        } catch (InvocationTargetException ex) {
+            throw new IllegalStateException("CONFIG: " + cnameProp + " implementation crashed during creation.", ex);
         } catch (ClassNotFoundException ex) {
             throw new IllegalStateException("CONFIG: " + cnameProp + " implementation not found in classpath: " + cname, ex);
-        } catch (InstantiationException ex) {
+        } catch (InstantiationException | NoSuchMethodException ex) {
             throw new IllegalStateException("CONFIG: " + cnameProp + " implementation " + cname + " does not have a no-arg constructor", ex);
         } catch (IllegalAccessException ex) {
             throw new IllegalStateException("CONFIG: failed to instantiate " + cname, ex);
         }
     }
-    
+
+    /**
+     * Load and instantiate an instance of the specified Java interface.  This method uses
+     * the fully-qualified class name as a system property key; the value of the system property
+     * is the fully qualified class name of an implementation of that interface.
+     *
+     * <p>This overloaded method will use a series of constructor arguments to build a new instance.  It assumes that
+     * the requested Class contains a constructor with the given arguments.
+     *
+     * @param <T>             Class type of the instantiated class
+     * @param implementationClassName   Class name to create
+     * @param constructorArgs The constructor arguments
+     * @return configured implementation of the interface
+     *
+     * @throws IllegalStateException if an instance cannot be created
+     */
+    public static <T> T loadPlugin(final String implementationClassName, final Object... constructorArgs)
+            throws IllegalStateException {
+        if (implementationClassName == null) {
+            throw new IllegalStateException("Implementation class name cannot be null.");
+        }
+        try {
+            Class<?> c = Class.forName(implementationClassName);
+            for (final Constructor<?> constructor : c.getDeclaredConstructors()) {
+                if (constructor.getParameterCount() == constructorArgs.length) {
+                    return (T) constructor.newInstance(constructorArgs);
+                }
+            }
+
+            throw new IllegalStateException("No matching constructor found.");
+        } catch (InvocationTargetException ex) {
+            throw new IllegalStateException("CONFIG: " + implementationClassName + " implementation crashed during creation.", ex);
+        } catch (ClassNotFoundException ex) {
+            throw new IllegalStateException("CONFIG: " + implementationClassName + " implementation not found in classpath: " + implementationClassName,
+                                            ex);
+        } catch (InstantiationException ex) {
+            throw new IllegalStateException(
+                    "CONFIG: " + implementationClassName + " implementation " + implementationClassName + " does not have a matching constructor", ex);
+        } catch (IllegalAccessException ex) {
+            throw new IllegalStateException("CONFIG: failed to instantiate " + implementationClassName, ex);
+        }
+    }
+
     /**
      * Validates that a URI conforms to the {scheme}:{scheme-specific-part}
      * pattern and that {scheme-specific-part} is a relative path with each
      * forward-slash (/) separated component being a valid path component.
-     * 
+     *
      * @param caller class performing the test
      * @param uri artifact URI to check
      * @throws IllegalArgumentException if the uri does not conform
@@ -165,18 +213,18 @@ public abstract class InventoryUtil {
         if (uri.getFragment() != null || uri.getQuery() != null
             || uri.getUserInfo() != null
             || uri.getAuthority() != null || uri.getHost() != null || uri.getPort() != -1) {
-            throw new IllegalArgumentException(caller.getSimpleName() 
+            throw new IllegalArgumentException(caller.getSimpleName()
                 + ": invalid Artifact.uri: " + uri + " -- authority|query|fragment|host|port not permitted");
         }
-        
+
         String scheme = uri.getScheme();
         String ssp = uri.getSchemeSpecificPart();
         if (scheme == null || ssp == null || ssp.isEmpty()) {
-            throw new IllegalArgumentException(caller.getSimpleName() 
+            throw new IllegalArgumentException(caller.getSimpleName()
                 + ": invalid Artifact.uri: " + uri + " -- expected {scheme}:{scheme-specific-part} where {scheme-specific-part} is a relative path");
         }
         if (ssp.charAt(0) == '/') {
-            throw new IllegalArgumentException(caller.getSimpleName() 
+            throw new IllegalArgumentException(caller.getSimpleName()
                 + ": invalid Artifact.uri: " + uri + " -- expected {scheme}:{scheme-specific-part} where {scheme-specific-part} is a relative path");
         }
         String[] comps = ssp.split("/");
@@ -184,10 +232,10 @@ public abstract class InventoryUtil {
             assertValidPathComponent(null, "scheme-specific-part", c);
         }
     }
-    
+
     /**
      * Find storage site by unique id.
-     * 
+     *
      * @param id entity ID
      * @param sites list of known sites
      * @return matching site or null if not found
@@ -200,10 +248,10 @@ public abstract class InventoryUtil {
         }
         return null;
     }
-    
+
     /**
      * Find storage site by resourceID.
-     * 
+     *
      * @param resourceID service identifier
      * @param sites list of known sites
      * @return matching site or null if not found
@@ -216,11 +264,11 @@ public abstract class InventoryUtil {
         }
         return null;
     }
-    
+
     /**
      * Assign last modified timestamp to an entity. This method is to support
      * persisting/serialising and reconstructing/deserialising an entity.
-     * 
+     *
      * @param ce the entity
      * @param d the timestamp
      */
@@ -239,7 +287,7 @@ public abstract class InventoryUtil {
     /**
      * Assign metaChecksum URI to an entity. This method is to support
      * persisting/serialising and reconstructing/deserialising an entity.
-     * 
+     *
      * @param ce the entity
      * @param u the URI
      */
@@ -254,10 +302,10 @@ public abstract class InventoryUtil {
             throw new RuntimeException("BUG", bug);
         }
     }
-    
+
     /**
      * Utility method so constructors can validate arguments.
-     * 
+     *
      * @param caller class doing test
      * @param name field name being checked
      * @param test object to test
@@ -269,15 +317,15 @@ public abstract class InventoryUtil {
             throw new IllegalArgumentException("invalid " + caller.getSimpleName() + "." + name + ": null");
         }
     }
-    
+
     /**
      * A valid path component cannot have: space ( ), slash (/), escape (\), percent (%),
      * semi-colon (;), ampersand (&amp;), or dollar ($) characters.
-     * 
+     *
      * @param caller class doing test
      * @param name field name being checked
      * @param test object to test
-     * @throws IllegalArgumentException if the value is invalid 
+     * @throws IllegalArgumentException if the value is invalid
      */
     public static void assertValidPathComponent(Class caller, String name, String test) {
         assertNotNull(caller, name, test);
@@ -301,26 +349,26 @@ public abstract class InventoryUtil {
                     + " semi-colon (;), ampersand (&), or dollar ($)");
         }
     }
-    
+
     /**
      * Checksum URI validation.
-     * 
+     *
      * @param caller class doing test
      * @param name field name being checked
      * @param uri URI to test
-     * @throws IllegalArgumentException if the value is invalid 
+     * @throws IllegalArgumentException if the value is invalid
      */
     public static void assertValidChecksumURI(Class caller, String name, URI uri) {
         String scheme = uri.getScheme();
         String sval = uri.getSchemeSpecificPart();
         if (scheme == null || sval == null) {
-            throw new IllegalArgumentException("invalid " + caller.getSimpleName() + "." + name + ": " 
+            throw new IllegalArgumentException("invalid " + caller.getSimpleName() + "." + name + ": "
                 + uri + "reason: expected <algorithm>:<hex value>");
         }
         try {
             byte[] b = HexUtil.toBytes(sval); // TODO: could check algorithm vs length here
         } catch (IllegalArgumentException ex) {
-            throw new IllegalArgumentException("invalid " + caller.getSimpleName() + "." + name + ": " 
+            throw new IllegalArgumentException("invalid " + caller.getSimpleName() + "." + name + ": "
                 + uri + " contains invalid hex chars -- expected <algorithm>:<hex value>");
         }
     }
